force-app/main/default/objects/Fabricante__c/Fabricante__c.object-meta.xml
<CustomObject>
    <label>Fabricante</label>
    <nameField>
        <label>Código Fabricante</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fabricantes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>