force-app/main/default/objects/Fabricante__c/fields/Codigo_Tipo_Fabricante__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Tipo_Fabricante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código Tipo Fabricante</label>
    <referenceTo>Tipo_Fabricante__c</referenceTo>
    <relationshipLabel>Fabricantes</relationshipLabel>
    <relationshipName>Fabricantes</relationshipName>
    <type>Lookup</type>
</CustomField>