force-app/main/default/objects/Fabricante__c/fields/CodigoFabricante__c.field-meta.xml
<CustomField>
    <fullName>CodigoFabricante__c</fullName>
    <externalId>true</externalId>
    <label>Código Fabricante</label>
    <length>80</length>
    <type>Text</type>
</CustomField>