force-app/main/default/objects/Fabricante__c/fields/Descricao_Fabricante__c.field-meta.xml
<CustomField>
    <fullName>Descricao_Fabricante__c</fullName>
    <label>Descrição Fabricante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>